[package]
name = "mockly"
version = "0.1.0"
authors = ["Dan Bruder <danb@structionsite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.8.3"
async-trait = "0.1.42"
tokio = {version ="0.3.5", features=["full"]}
